--- a/pom.xml
+++ b/pom.xml
@@ -86,6 +86,11 @@
             <version>1.2</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.mindrot</groupId>
+            <artifactId>jbcrypt</artifactId>
+            <version>0.4</version>
+        </dependency>
 
     </dependencies>
 
